--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/ActualizarCliente.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/ActualizarCliente.cshtml
@@ -13,7 +13,8 @@
             <div class="card-body" style="margin-top: 20px;">
                 <div class="table-responsive" style="overflow-x: hidden;">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-
+                        <h3>Editar Cliente</h3>
+                        <hr />
                         @if (ViewBag.MsjPantalla != null)
                         {
                             <div class="alert alert-warning" role="alert" style="text-align:center">
