--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/NuevoCliente.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Cliente/NuevoCliente.cshtml
@@ -13,7 +13,8 @@
             <div class="card-body" style="margin-top: 20px;">
                 <div class="table-responsive" style="overflow-x: hidden;">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-
+                        <h3>Agregar Cliente</h3>
+                        <hr />
                         @if (ViewBag.MsjPantalla != null)
                         {
                             <div class="alert alert-warning" role="alert" style="text-align:center">
@@ -36,7 +37,7 @@
                                 <div class="invalid-feedback">Por favor, ingrese el teléfono del cliente con su formato</div>
                             </div>
                             <div class="form-group my-4">
-                                @Html.Label("Dirección Exacta del Cliente")
+                                @Html.Label("Dirección del Cliente")
                                 @Html.TextBoxFor(m => m.direccionCliente, new { @class = "form-control", @placeholder = "Dirección", @required = "true", @type = "text", @maxlength = "255" })
                                 @Html.ValidationMessageFor(m => m.direccionCliente, "", new { @class = "text-danger" })
                                 <div class="invalid-feedback">Por favor, ingrese la dirección del cliente</div>
