--- a/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/NuevoSucursal.cshtml
+++ b/Web_TrabajoFidelitas/Web_TrabajoFidelitas/Views/Sucursal/NuevoSucursal.cshtml
@@ -13,7 +13,8 @@
             <div class="card-body" style="margin-top: 20px;">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-
+                        <h3>Agregar Sucursal</h3>
+                        <hr />
                         @if (ViewBag.MsjPantalla != null)
                         {
                             <div class="alert alert-warning" role="alert" style="text-align:center">
@@ -29,7 +30,7 @@
                                 @Html.ValidationMessageFor(m => m.nombreSucursal, "", new { @class = "text-danger" })
                                 <div class="invalid-feedback">Por favor, escriba el nombre de la sucursal respectiva</div>
                             </div>
-                      
+
                             <div class="form-group my-3">
                                 @Html.Label("Direccion de la Sucursal")
                                 @Html.TextBoxFor(m => m.direccionSucursal, new { @class = "form-control", @placeholder = "Dirección", @required = "true", @type = "text", @maxlength = "255" })
